https links and some magical SEO shit

--- a/changelog.old.html
+++ b/changelog.old.html
@@ -45,7 +45,7 @@
     <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
 <script type="application/ld+json">
 {
-  "@context" : "http://schema.org",
+  "@context" : "https://schema.org",
   "@type" : "SoftwareApplication",
   "name" : "QtPass",
   "url" : "https://qtpass.org/",
@@ -77,7 +77,7 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.0</small></h1>
-        <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
             <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
@@ -300,7 +300,7 @@
 </div>
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
+  "@context": "https://schema.org",
   "@type": "Organization",
   "url": "https://qtpass.org"
 }
