--- a/downloads.html
+++ b/downloads.html
@@ -45,7 +45,7 @@
     <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
     <script type="application/ld+json">
 {
-  "@context" : "http://schema.org",
+  "@context" : "https://schema.org",
   "@type" : "SoftwareApplication",
   "name" : "QtPass",
   "url" : "https://qtpass.org/",
@@ -77,7 +77,7 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.2</small></h1>
-        <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p>QtPass is a multi-platform GUI for <a href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
             <a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
@@ -113,7 +113,7 @@
         <pre><code>dnf install qtpass</code></pre>
 
         <h4 id="deb">Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
-        In <a title="Debian QtPass in testing" href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a title="Ubuntu QtPass in xenial" href="http://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
+        In <a title="Debian QtPass in testing" href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a title="Ubuntu QtPass in xenial" href="https://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
         <pre><code>apt-get install qtpass</code></pre>
 
         <h4 id="Gentoo">Gentoo</h4>
@@ -121,11 +121,11 @@
         <pre><code>emerge -atv qtpass</code></pre>
 
         <h4 id="Void">Void</h4>
-        Has a nie xbps <a title="Void Linux QtPass package" href="http://www.voidlinux.eu/packages/">package</a>.
+        Has a nie xbps <a title="Void Linux QtPass package" href="https://www.voidlinux.eu/packages/">package</a>.
         <pre><code>xbps-install -Su qtpass</code></pre>
 
         <h4 id="NixOS">NixOS</h4>
-        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="http://nixos.org/nixos/packages.html">packages</a>
+        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="https://nixos.org/nixos/packages.html">packages</a>
         <pre><code>nix-env -iA nixos.pkgs.qtpass</code></pre>
 
         <h4 id="Soleus">Soleus Project</h4>
@@ -155,7 +155,7 @@
 
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a href="http://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
+        Via <a href="https://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
 
         <h3><a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
@@ -207,7 +207,7 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 </div>
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
+  "@context": "https://schema.org",
   "@type": "Organization",
   "url": "https://qtpass.org"
 }
