--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="canonical" href="https://qtpass.org">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -45,7 +46,7 @@
     <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
 <script type="application/ld+json">
 {
-  "@context" : "http://schema.org",
+  "@context" : "https://schema.org",
   "@type" : "SoftwareApplication",
   "name" : "QtPass",
   "url" : "https://qtpass.org/",
@@ -77,7 +78,7 @@
 <div class="wrapper">
     <header>
         <h1>QtPass <small>1.2.1</small></h1>
-        <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
+        <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
             <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
@@ -128,10 +129,10 @@
         </p>
 
         <ul>
-            <li>Using <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
+            <li>Using <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a> or git and gpg2 directly</li>
             <li>Cross platform: Linux, BSD, OS X and Windows</li>
             <li>Using native widgets and iconography where possible</li>
-            <li>Reading pass <a title="pass, the standard unix password manager" href="http://www.passwordstore.org/">password stores</a></li>
+            <li>Reading pass <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">password stores</a></li>
             <li>Decrypting and displaying the password and related info</li>
             <li>Editing and adding of passwords and information</li>
             <li>Updating to and from a git repository</li>
@@ -167,17 +168,17 @@
 
         <h4><a href="/downloads">More options</a></h4>
 
-        <h3><a id="downloads-windows" class="anchor" href="#windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows</h3>
+        <h3><a id="windows" class="anchor" href="#windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows</h3>
 
         <p>Latest stable on the <a title="QtPass Windows releases" href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a title="QtPass Windows builds" href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
         Via <a title="choco install qtpass" href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <pre><code>choco install qtpass</code></pre>
 
-        <h3><a id="downloads-osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OSX</h3>
+        <h3><a id="osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OSX</h3>
 
         <p>Latest stable on the <a title="QtPass MacOs releases" href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a title="QtPass OSX builds" href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a title="brew cask install qtpass" href="http://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
+        Via <a title="brew cask install qtpass" href="https://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
 
         <h3><a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
@@ -285,7 +286,7 @@ fi
         <h3><a id="can-i-import-from-keepass-lastpass-or-x" class="anchor" href="#can-i-import-from-keepass-lastpass-or-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I import from KeePass, LastPass or X?</h3>
 
         <ul>
-            <li>Yes, check <a href="http://www.passwordstore.org/#migration">passwordstore.org/#migration</a> for more info.</li>
+            <li>Yes, check <a href="https://www.passwordstore.org/#migration">passwordstore.org/#migration</a> for more info.</li>
         </ul>
 
         <h3><a id="current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
@@ -331,7 +332,7 @@ fi
 </div>
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
+  "@context": "https://schema.org",
   "@type": "Organization",
   "url": "https://qtpass.org"
 }
