--- a/changelog.old.html
+++ b/changelog.old.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="canonical" href="https://qtpass.org/changelog.old">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
