--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <h3><a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
-            <li>QtPass requires Qt5.</li>
+            <li>QtPass requires Qt 5.2 or later.</li>
             <li>The Linguist package is required to compile the translations.</li>
             <li>For use of the fallback icons the SVG library is required.</li>
         </ul>
