--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>QtPass 404</title>
     <meta name="description" content="QtPass 404 page not found for all distributions.">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
