--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>QtPass beta Changelog</title>
     <meta name="description" content="Even older changes to QtPass">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
