--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>QtPass downloads</title>
     <meta name="description" content="QtPass downloads for Windows, Mac, Linux and BSD. Instalation instructions for all distributions.">
     <meta name="keywords" content="qtpass, pass, gpg, git, password, store, manager, security">
