--- a/downloads.html
+++ b/downloads.html
@@ -149,7 +149,7 @@
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
         Via <a href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/chocolatey/qtpass.svg" alt="Chocolatey package"></a>.
-	<pre><code>choco install qtpass</code></pre>
+	    <pre><code>choco install qtpass</code></pre>
 
         <h3 id="macOS"><a id="downloads-osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>macOS</h3>
 
@@ -157,7 +157,8 @@
 
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a href="https://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
+        Via <a href="https://caskroom.io">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>.
+        <pre><code>brew cask install qtpass</code></pre>
 
         <p>QtPass works best with pass and pinentry-mac installed. <pre><code>brew install pass pinentry-mac</code></pre></p>
 
