Even more badges . .

--- a/downloads.html
+++ b/downloads.html
@@ -114,7 +114,7 @@
         <pre><code>dnf install qtpass</code></pre>
 
         <h4 id="deb">Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
-        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_stable/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in xenial" href="https://packages.ubuntu.com/bionic/utils/qtpass">bionic</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_18_04/qtpass.svg" alt="Ubuntu 18.04 package"></a>.
+        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_stable/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Disco Dingo" href="https://packages.ubuntu.com/disco/utils/qtpass">Disco Dingo</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_19_04/qtpass.svg" alt="Ubuntu 19.04 package"></a>.
         <pre><code>apt-get install qtpass</code></pre>
 
         <h4 id="Gentoo">Gentoo</h4>
@@ -122,7 +122,7 @@
         <pre><code>emerge -atv qtpass</code></pre>
 
         <h4 id="Void">Void</h4>
-        Has a nie xbps <a title="Void Linux QtPass package" href="https://www.voidlinux.eu/packages/">package</a>.
+        Has a nie xbps <a title="Void Linux QtPass package" href="https://www.voidlinux.eu/packages/">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/void_x86_64/qtpass.svg" alt="Void Linux x86_64 package"></a>.
         <pre><code>xbps-install -Su qtpass</code></pre>
 
         <h4 id="NixOS">NixOS</h4>
@@ -130,7 +130,7 @@
         <pre><code>nix-env -iA nixos.pkgs.qtpass</code></pre>
 
         <h4 id="Soleus">Soleus Project</h4>
-        Has a stable <a title="Soleus QtPass package" href="https://git.solus-project.com/packages/qtpass/">package</a> for QtPass.
+        Has a stable <a title="Soleus QtPass package" href="https://git.solus-project.com/packages/qtpass/">package</a> for QtPass <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/solus/qtpass.svg" alt="Solus package"></a>.
         <pre><code>eopkg install qtpass</code></pre>
 
         <h4 id="Slackware">Slackware</h4>
