--- a/404.html
+++ b/404.html
@@ -133,8 +133,8 @@
             <small><a title="QtPass sitemap" href="/sitemap">sitemap</a></small></p>
         <img src="https://api.travis-ci.org/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/QtPass.svg?branch=master">
         <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
-        <img alt="Coverity Scan Status" src="https://scan.coverity.com/projects/5266/badge.svg"/>
-    </footer>
+        <br/>
+        <img alt="Semle LGTM Code Quality" src="https://img.shields.io/lgtm/grade/cpp/g/IJHack/QtPass.svg?logo=lgtm&logoWidth=18"/>    </footer>
 </div>
 <script type="application/ld+json">
 {
