--- a/changelog.1.1.html
+++ b/changelog.1.1.html
@@ -253,7 +253,8 @@
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         <a title="Travis CI" href="https://travis-ci.org/IJHack/QtPass"><img src="https://api.travis-ci.org/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/QtPass.svg?branch=master"></a>
         <a title="AppVeyor CI" href="https://ci.appveyor.com/project/annejan/qtpass"><img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/></a>
-        <a title="Coverity static analysis" href="https://scan.coverity.com/projects/ijhack-qtpass"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/5266/badge.svg"/></a>
+        <br/>
+        <a title="LGTM Code Quality" href="https://lgtm.com/projects/g/IJHack/QtPass/context:cpp"><img alt="Semle LGTM Code Quality" src="https://img.shields.io/lgtm/grade/cpp/g/IJHack/QtPass.svg?logo=lgtm&logoWidth=18"/></a>
     </footer>
 </div>
 <script type="application/ld+json">
