--- a/changelog.html
+++ b/changelog.html
@@ -97,6 +97,19 @@
 
     </header>
     <section>
+        <h2><a id=v1.3.2" class="anchor" href="#v1.3.2" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.3.2 Welcoming new users again</h2>
+
+        <ul>
+            <li>Don't call QtPass::setup() from QtPass class constructor <a href="https://github.com/IJHack/QtPass/pull/482" data-hovercard-type="pull_request" data-hovercard-url="/IJHack/QtPass/pull/482/hovercard">#482</a> (<a href="https://github.com/maciejsszmigiero">maciejsszmigiero</a>)
+                <ul>
+                    <li>fixes first run issues <a href="https://github.com/IJHack/QtPass/issues/485" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/485/hovercard">#485</a>,  <a href="https://github.com/IJHack/QtPass/issues/481" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/481/hovercard">#481</a>, <a href="https://github.com/IJHack/QtPass/issues/466" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/466/hovercard">#466</a>, <a href="https://github.com/IJHack/QtPass/issues/423" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/423/hovercard">#423</a> and <a href="https://github.com/IJHack/QtPass/issues/308" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/308/hovercard">#308</a></li>
+                </ul>
+            </li>
+            <li>Password window padding <a href="https://github.com/IJHack/QtPass/issues/484" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/484/hovercard">#484</a></li>
+            <li>Buttons width on RHEL 8 <a href="https://github.com/IJHack/QtPass/issues/483" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/483/hovercard">#483</a></li>
+            <li>Start minimized works again <a href="https://github.com/IJHack/QtPass/issues/471" data-hovercard-type="issue" data-hovercard-url="/IJHack/QtPass/issues/471/hovercard">#471</a></li>
+        </ul>
+
         <h2><a id=v1.3.1" class="anchor" href="#v1.3.1" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.3.1 Much needed cleanup</h2>
 
         <ul>
