--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     "@type" : "Organization",
     "name" : "IJHack"
   },
-  "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
+  "downloadUrl" : "https://github.com/IJHack/QtPass/releases",
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
@@ -81,11 +81,11 @@
         <p>QtPass is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
-            <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
+            <a title="QtPass project" href="https://github.com/IJHack/QtPass">View the Project on GitHub <small>IJHack/QtPass</small></a>
         </p>
 
         <ul>
-            <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+            <li><a title="QtPass releases" href="https://github.com/IJHack/QtPass/releases">Download <strong>Releases</strong></a></li>
             <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe <strong>Windows</strong></a></li>
             <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
@@ -170,13 +170,13 @@
 
         <h3><a id="windows" class="anchor" href="#windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows</h3>
 
-        <p>Latest stable on the <a title="QtPass Windows releases" href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a title="QtPass Windows builds" href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
+        <p>Latest stable on the <a title="QtPass Windows releases" href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a title="QtPass Windows builds" href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
         Via <a title="choco install qtpass" href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <pre><code>choco install qtpass</code></pre>
 
         <h3><a id="osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OSX</h3>
 
-        <p>Latest stable on the <a title="QtPass MacOs releases" href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a title="QtPass OSX builds" href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
+        <p>Latest stable on the <a title="QtPass MacOs releases" href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a title="QtPass OSX builds" href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
         Via <a title="brew cask install qtpass" href="https://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
 
@@ -279,7 +279,7 @@ fi
 . /tmp/gpg-agent.env</code></pre>
 
         <ul>
-            <li>More info: <a title="Copy password by Ctrl+C" href="https://github.com/IJHack/qtpass/issues/60">issue 60</a> and <a title="Yubikey Neo Pin entry not working properly on Ubuntu 15.04" href="https://github.com/IJHack/qtpass/issues/73">issue 73</a></li>
+            <li>More info: <a title="Copy password by Ctrl+C" href="https://github.com/IJHack/QtPass/issues/60">issue 60</a> and <a title="Yubikey Neo Pin entry not working properly on Ubuntu 15.04" href="https://github.com/IJHack/QtPass/issues/73">issue 73</a></li>
         </ul>
 
         <h3><a id="can-i-import-from-keepass-lastpass-or-x" class="anchor" href="#can-i-import-from-keepass-lastpass-or-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I import from KeePass, LastPass or X?</h3>
@@ -297,7 +297,7 @@ fi
         <h3><a id="where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
         
         <ul>
-            <li>Create an <a title="QtPass issue queue" href="https://github.com/IJHack/qtpass/issues">issue</a> issues on github.</li>
+            <li>Create an <a title="QtPass issue queue" href="https://github.com/IJHack/QtPass/issues">issue</a> issues on github.</li>
             <li>Send an email to <a title="Mail us for help" href="mailto:help@qtpass.org">help@qtpass.org</a></li>
         </ul>
 
