--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -54,7 +54,7 @@
     "@type" : "Organization",
     "name" : "IJHack"
   },
-  "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
+  "downloadUrl" : "https://github.com/IJHack/QtPass/releases",
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
@@ -81,11 +81,11 @@
         <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
-            <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
+            <a title="QtPass project" href="https://github.com/IJHack/QtPass">View the Project on GitHub <small>IJHack/QtPass</small></a>
         </p>
 
         <ul>
-            <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+            <li><a title="QtPass releases" href="https://github.com/IJHack/QtPass/releases">Download <strong>Releases</strong></a></li>
             <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe <strong>Windows</strong></a></li>
             <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
@@ -101,7 +101,7 @@
         <h2><a id=v0.9.2" class="anchor" href="#v0.9.2" aria-hidden="true"><span class="octicon octicon-link"></span></a>v0.9.2 Informed decisions</h2>
 
         <ul>
-            <li>Filter expired keys and show creation and expiry date of keys <a href="https://github.com/IJHack/qtpass/issues/70" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/70" data-id="96077668" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#70</a>
+            <li>Filter expired keys and show creation and expiry date of keys <a href="https://github.com/IJHack/QtPass/issues/70" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/70" data-id="96077668" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#70</a>
             </li>
             <li>Fixed stupid sigsev on empty profile names found by <a href="https://github.com/sigio" class="user-mention">@sigio</a>
             </li>
@@ -113,7 +113,7 @@
         <ul>
             <li>
                 <code>pwgen</code> and <code>git</code> options not available when not applicable</li>
-            <li>git removal of files (when applicable) <a href="https://github.com/IJHack/qtpass/issues/57" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/57" data-id="88679104" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#57</a>
+            <li>git removal of files (when applicable) <a href="https://github.com/IJHack/QtPass/issues/57" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/57" data-id="88679104" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#57</a>
             </li>
             <li>filtering of unusable keys in user dialog</li>
         </ul>
@@ -131,11 +131,11 @@
         <h2><a id=v0.8.6" class="anchor" href="#v0.8.6" aria-hidden="true"><span class="octicon octicon-link"></span></a>v0.8.6 Interoperability and pwgen</h2>
 
         <ul>
-            <li>Handle copying and hiding also when errors (warnings) occur <a href="https://github.com/IJHack/qtpass/issues/60" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/60" data-id="90717791" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#60</a>
+            <li>Handle copying and hiding also when errors (warnings) occur <a href="https://github.com/IJHack/QtPass/issues/60" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/60" data-id="90717791" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#60</a>
             </li>
-            <li>Remember MainWindow position, size and splitter location <a href="https://github.com/IJHack/qtpass/issues/59" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/59" data-id="89883115" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#59</a>
+            <li>Remember MainWindow position, size and splitter location <a href="https://github.com/IJHack/QtPass/issues/59" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/59" data-id="89883115" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#59</a>
             </li>
-            <li>Fixed nasty deadlocks and possibly other breakages with process handling <a href="https://github.com/IJHack/qtpass/issues/63" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/63" data-id="93221427" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#63</a>
+            <li>Fixed nasty deadlocks and possibly other breakages with process handling <a href="https://github.com/IJHack/QtPass/issues/63" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/63" data-id="93221427" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#63</a>
             </li>
             <li>Many small fixes.</li>
         </ul>
@@ -143,11 +143,11 @@
         <h2><a id=v0.8.5.1" class="anchor" href="#v0.8.5.1" aria-hidden="true"><span class="octicon octicon-link"></span></a>v0.8.5.1 Stability and small stuff</h2>
 
         <ul>
-            <li>Handle copying and hiding also when errors (warnings) occur <a href="https://github.com/IJHack/qtpass/issues/60" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/60" data-id="90717791" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#60</a>
+            <li>Handle copying and hiding also when errors (warnings) occur <a href="https://github.com/IJHack/QtPass/issues/60" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/60" data-id="90717791" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#60</a>
             </li>
-            <li>Remember MainWindow position, size and splitter location <a href="https://github.com/IJHack/qtpass/issues/59" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/59" data-id="89883115" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#59</a>
+            <li>Remember MainWindow position, size and splitter location <a href="https://github.com/IJHack/QtPass/issues/59" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/59" data-id="89883115" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#59</a>
             </li>
-            <li>Fixed nasty deadlocks and possibly other breakages with process handling <a href="https://github.com/IJHack/qtpass/issues/63" class="issue-link js-issue-link" data-url="https://github.com/IJHack/qtpass/issues/63" data-id="93221427" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#63</a>
+            <li>Fixed nasty deadlocks and possibly other breakages with process handling <a href="https://github.com/IJHack/QtPass/issues/63" class="issue-link js-issue-link" data-url="https://github.com/IJHack/QtPass/issues/63" data-id="93221427" data-error-text="Failed to load issue title" data-permission-text="Issue title is private">#63</a>
             </li>
             <li>Many small fixes.</li>
         </ul>
