--- a/changelog.html
+++ b/changelog.html
@@ -54,7 +54,7 @@
     "@type" : "Organization",
     "name" : "IJHack"
   },
-  "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
+  "downloadUrl" : "https://github.com/IJHack/QtPass/releases",
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
@@ -81,11 +81,11 @@
         <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
-            <a title="QtPass project" href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
+            <a title="QtPass project" href="https://github.com/IJHack/QtPass">View the Project on GitHub <small>IJHack/QtPass</small></a>
         </p>
 
         <ul>
-            <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+            <li><a title="QtPass releases" href="https://github.com/IJHack/QtPass/releases">Download <strong>Releases</strong></a></li>
             <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe <strong>Windows</strong></a></li>
             <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
