--- a/downloads.html
+++ b/downloads.html
@@ -54,7 +54,7 @@
     "@type" : "Organization",
     "name" : "IJHack"
   },
-  "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
+  "downloadUrl" : "https://github.com/IJHack/QtPass/releases",
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
@@ -81,11 +81,11 @@
         <p>QtPass is a multi-platform GUI for <a href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
-            <a href="https://github.com/IJHack/qtpass">View the Project on GitHub <small>IJHack/qtpass</small></a>
+            <a href="https://github.com/IJHack/QtPass">View the Project on GitHub <small>IJHack/QtPass</small></a>
         </p>
 
         <ul>
-            <li><a title="QtPass releases" href="https://github.com/IJHack/qtpass/releases">Download <strong>Releases</strong></a></li>
+            <li><a title="QtPass releases" href="https://github.com/IJHack/QtPass/releases">Download <strong>Releases</strong></a></li>
             <li><a title="QtPass Windows" href="/downloads#Windows">Installer .exe <strong>Windows</strong></a></li>
             <li><a title="QtPass macOS" href="/downloads#macOS">Get a .dmg <strong>macOS</strong></a></li>
         </ul>
@@ -146,7 +146,7 @@
 
         <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.3.1/qtpass-1.3.1.exe">QtPass 1.3.1</a>
 
-        <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
+        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
         Via <a href="https://chocolatey.org/packages/qtpass">Chocolatey</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/chocolatey/qtpass.svg" alt="Chocolatey package"></a>.
 	    <pre><code>choco install qtpass</code></pre>
@@ -155,7 +155,7 @@
 
         <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.3.1/qtpass-1.3.1.dmg">QtPass 1.3.1</a>
 
-        <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
+        <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
         Via <a href="https://caskroom.io">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>.
         <pre><code>brew cask install qtpass</code></pre>
