fix a typo in the update recommendation

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </p>
 
         <p>
-            We advice to <a href="/downloads">update to 1.2.1 or alter</a> as soon as possible and change any password you may have generated with the QtPass' password generator.
+            We advice to <a href="/downloads">update to 1.2.1 or later</a> as soon as possible and change any password you may have generated with the QtPass' password generator.
     	</p>
 
         <h2><a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
