--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <p>Latest stable on the <a title="QtPass MacOs releases" href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a title="QtPass OSX builds" href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a title="brew install qtpass --cask" href="https://github.com/Homebrew/homebrew-cask">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
+        Via <a title="brew install qtpass" href="https://github.com/Homebrew/homebrew-cask">Homebrew Cask</a> <pre><code>brew install qtpass --cask</code></pre>
 
         <h3><a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
@@ -343,8 +343,6 @@ fi
             <small><a title="QtPass sitemap" href="/sitemap">sitemap</a></small></p>
         <img src="https://api.travis-ci.com/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.com/IJHack/QtPass.svg?branch=master">
         <img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/>
-        <br/>
-        <img alt="Semle LGTM Code Quality" src="https://img.shields.io/lgtm/grade/cpp/g/IJHack/QtPass.svg?logo=lgtm&logoWidth=18"/>
     </footer>
 </div>
 <script type="application/ld+json">
