More updates for 1.4

--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -58,7 +58,7 @@
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
-  "softwareVersion" : "1.3",
+  "softwareVersion" : "1.4",
   "applicationCategory" : "Security, Utility",
   "offers": {
     "@type": "Offer",
@@ -206,7 +206,8 @@
 
         <ul>
             <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.3" href="/changelog">Changelog of 1.3 releases</a></li>
+            <li><a title="Changes in 1.4" href="/changelog">Changelog of 1.4 releases</a></li>
+            <li><a title="Changes in 1.3" href="/changelog.1.3">Changelog of 1.3 releases</a></li>
             <li><a title="Changes in 1.2" href="/changelog.1.2">Changelog of 1.2 releases</a></li>
             <li><a href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a href="/changelog.old">Changelog of 1.0 releases</a></li>
@@ -229,8 +230,6 @@
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         <a title="Travis CI" href="https://travis-ci.com/IJHack/QtPass"><img src="https://api.travis-ci.com/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.com/IJHack/QtPass.svg?branch=master"></a>
         <a title="AppVeyor CI" href="https://ci.appveyor.com/project/annejan/qtpass"><img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/></a>
-        <br/>
-        <a title="LGTM Code Quality" href="https://lgtm.com/projects/g/IJHack/QtPass/context:cpp"><img alt="Semle LGTM Code Quality" src="https://img.shields.io/lgtm/grade/cpp/g/IJHack/QtPass.svg?logo=lgtm&logoWidth=18"/></a>
     </footer>
 </div>
 <script type="application/ld+json">
