--- a/downloads.html
+++ b/downloads.html
@@ -58,7 +58,7 @@
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
-  "softwareVersion" : "1.3",
+  "softwareVersion" : "1.4",
   "applicationCategory" : "Security, Utility",
   "offers": {
     "@type": "Offer",
@@ -77,7 +77,7 @@
 <div class="background"></div>
 <div class="wrapper">
     <header>
-        <h1>QtPass <small>1.3</small></h1>
+        <h1>QtPass <small>1.4</small></h1>
         <p>QtPass is a multi-platform GUI for <a href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -114,7 +114,7 @@
         <pre><code>dnf install qtpass</code></pre>
 
         <h4 id="deb">Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
-        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_stable/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Disco Dingo" href="https://packages.ubuntu.com/disco/utils/qtpass">Disco Dingo</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_19_04/qtpass.svg" alt="Ubuntu 19.04 package"></a>.
+        In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_13/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Mantic Minotaur" href="https://packages.ubuntu.com/mantic/utils/qtpass">Mantic Minotaur</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_23_10/qtpass.svg" alt="Ubuntu 23.10 package"></a>.
         <pre><code>apt-get install qtpass</code></pre>
 
         <h4 id="Gentoo">Gentoo</h4>
@@ -126,7 +126,7 @@
         <pre><code>xbps-install -Su qtpass</code></pre>
 
         <h4 id="NixOS">NixOS</h4>
-        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="https://nixos.org/nixos/packages.html">packages</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/nix_stable/qtpass.svg" alt="nixpkgs stable package"></a>.
+        One of the first to addopt QtPass <a title="NixOS QtPass packages" href="https://nixos.org/nixos/packages.html">packages</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/nix_stable_23_05/qtpass.svg" alt="nixpkgs stable package"></a>.
         <pre><code>nix-env -iA nixos.pkgs.qtpass</code></pre>
 
         <h4 id="Soleus">Soleus Project</h4>
@@ -157,8 +157,8 @@
 
         <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a href="https://caskroom.io">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>.
-        <pre><code>brew cask install qtpass</code></pre>
+        Via <a href="https://github.com/Homebrew/homebrew-cask">Homebrew Cask</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/homebrew_casks/qtpass.svg" alt="Homebrew Casks package"></a>.
+        <pre><code>brew install qtpass --cask</code></pre>
 
         <p>QtPass works best with pass and pinentry-mac installed. <pre><code>brew install pass pinentry-mac</code></pre></p>
 
@@ -184,7 +184,8 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
 
         <ul>
 	    <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.3" href="/changelog">Changelog of 1.3 releases</a></li>
+            <li><a title="Changes in 1.4" href="/changelog">Changelog of 1.4 releases</a></li>
+            <li><a title="Changes in 1.3" href="/changelog.1.3">Changelog of 1.3 releases</a></li>
             <li><a title="Changes in 1.2" href="/changelog.1.2">Changelog of 1.2 releases</a></li>
             <li><a title="Changes in 1.1" href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
