--- a/changelog.1.2.html
+++ b/changelog.1.2.html
@@ -58,7 +58,7 @@
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
-  "softwareVersion" : "1.3",
+  "softwareVersion" : "1.4",
   "applicationCategory" : "Security, Utility",
   "offers": {
     "@type": "Offer",
@@ -77,7 +77,7 @@
 <div class="background"></div>
 <div class="wrapper">
     <header>
-        <h1>QtPass <small>1.3</small></h1>
+        <h1>QtPass <small>1.2</small></h1>
         <p><a title="QtPass GUI for pass, the standard UNIX password manager" href="https://qtpass.org/">QtPass</a> is a multi-platform GUI for <a title="pass, the standard unix password manager" href="https://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -164,7 +164,8 @@
 
         <ul>
             <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.3" href="/changelog">Changelog of 1.3 releases</a></li>
+            <li><a title="Changes in 1.4" href="/changelog">Changelog of 1.4 releases</a></li>
+            <li><a title="Changes in 1.3" href="/changelog.1.3">Changelog of 1.3 releases</a></li>
             <li><a title="Changes in 1.2" href="/changelog.1.2">Changelog of 1.2 releases</a></li>
             <li><a title="Changes in 1.1" href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
@@ -188,8 +189,6 @@
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         <a title="Travis CI" href="https://travis-ci.com/IJHack/QtPass"><img src="https://api.travis-ci.com/IJHack/QtPass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.com/IJHack/QtPass.svg?branch=master"></a>
         <a title="AppVeyor CI" href="https://ci.appveyor.com/project/annejan/qtpass"><img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/></a>
-        <br/>
-        <a title="LGTM Code Quality" href="https://lgtm.com/projects/g/IJHack/QtPass/context:cpp"><img alt="Semle LGTM Code Quality" src="https://img.shields.io/lgtm/grade/cpp/g/IJHack/QtPass.svg?logo=lgtm&logoWidth=18"/></a>
     </footer>
 </div>
 <script type="application/ld+json">
