--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@ fi
 
         <ul>
             <li><a title="Changes in master" href="/docs/md__c_h_a_n_g_e_l_o_g.html">Current Change Log</a></li>
-            <li><a title="Changes in 1.3" href="/changelog">Changelog of 1.3 releases</a></li>
+            <li><a title="Changes in 1.4" href="/changelog">Changelog of 1.4 releases</a></li>
+            <li><a title="Changes in 1.3" href="/changelog.1.2">Changelog of 1.3 releases</a></li>
             <li><a title="Changes in 1.2" href="/changelog.1.2">Changelog of 1.2 releases</a></li>
             <li><a title="Changes in 1.1" href="/changelog.1.1">Changelog of 1.1 releases</a></li>
             <li><a title="Changes in 1.0" href="/changelog.old">Changelog of 1.0 releases</a></li>
