Updates on install instructions

--- a/downloads.html
+++ b/downloads.html
@@ -110,12 +110,13 @@
 
         <h4 id="rpm">OpenSUSE, Fedora &amp; CentOS</h4>
         Via <a title="SuSE Open Build System" href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> and <a title="Fedora QtPass package" href="https://admin.fedoraproject.org/pkgdb/package/rpms/qtpass/">Fedora</a> package db up to <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/fedora_rawhide/qtpass.svg" alt="Fedora Rawhide package"></a>.
+        <pre><code>zypper install qtpass</code></pre>
         <pre><code>yum install qtpass</code></pre>
         <pre><code>dnf install qtpass</code></pre>
 
         <h4 id="deb">Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
         In amongst others <a title="Debian QtPass in stable" href="https://packages.debian.org/stretch/qtpass">stable</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_13/qtpass.svg" alt="Debian Stable package"></a>, <a title="Debian QtPass in unstable" href="https://packages.debian.org/unstable/utils/qtpass">sid</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/debian_unstable/qtpass.svg" alt="Debian Unstable package"></a> and <a title="Ubuntu QtPass in Mantic Minotaur" href="https://packages.ubuntu.com/mantic/utils/qtpass">Mantic Minotaur</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/ubuntu_23_10/qtpass.svg" alt="Ubuntu 23.10 package"></a>.
-        <pre><code>apt-get install qtpass</code></pre>
+        <pre><code>apt install qtpass</code></pre>
 
         <h4 id="Gentoo">Gentoo</h4>
         Source build <a title="Gentoo ebuild" href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a> <a href="https://repology.org/metapackage/qtpass"><img src="https://repology.org/badge/version-only-for-repo/gentoo/qtpass.svg" alt="Gentoo package"></a>.
