defer js loading

--- a/changelog.1.1.html
+++ b/changelog.1.1.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <link rel="canonical" href="https://qtpass.org/changelog.1.1">
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" defer></script>
     <![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
@@ -163,7 +163,7 @@
 	    </li>
 	    <li>Completed Dutch and German translations</li>
 	</ul>
-	
+
         <h2><a id=v1.1.3" class="anchor" href="#v1.1.3" aria-hidden="true"><span class="octicon octicon-link"></span></a>v1.1.3 Some more bug-squashing</h2>
 
         <ul>
@@ -263,7 +263,7 @@
   "url": "https://qtpass.org"
 }
 </script>
-<script src="javascripts/scale.fix.js"></script>
-<script src="javascripts/main.js"></script>
+<script src="javascripts/scale.fix.js" defer></script>
+<script src="javascripts/main.js" defer></script>
 </body>
 </html>
