--- a/changelog.beta.html
+++ b/changelog.beta.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <link rel="canonical" href="https://qtpass.org/changelog.beta">
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" defer></script>
     <![endif]-->
     <link rel="apple-touch-icon" sizes="57x57" href="./images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./images/apple-icon-60x60.png">
@@ -239,7 +239,7 @@
   "url": "https://qtpass.org"
 }
 </script>
-<script src="javascripts/scale.fix.js"></script>
-<script src="javascripts/main.js"></script>
+<script src="javascripts/scale.fix.js" defer></script>
+<script src="javascripts/main.js" defer></script>
 </body>
 </html>
