--- a/downloads.html
+++ b/downloads.html
@@ -145,7 +145,7 @@
 
         <h3 id="Windows"><a id="downloads-windows" class="anchor" href="#windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windows</h3>
 
-        <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.3.1/qtpass-1.3.1.exe">QtPass 1.3.1</a>
+        <a class="app windows" href="https://github.com/IJHack/QtPass/releases/download/v1.4.0/qtpass-1.4.0.exe">QtPass 1.4.0</a>
 
         <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://ci.appveyor.com/project/annejan/qtpass/build/artifacts">AppVeyor</a>.</p>
 
@@ -154,7 +154,7 @@
 
         <h3 id="macOS"><a id="downloads-osx" class="anchor" href="#osx" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>macOS</h3>
 
-        <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.3.1/qtpass-1.3.1.dmg">QtPass 1.3.1</a>
+        <a class="app macos" href="https://github.com/IJHack/QtPass/releases/download/v1.4.0/qtpass-1.4.0.dmg">QtPass 1.4.0</a>
 
         <p>Latest stable on the <a href="https://github.com/IJHack/QtPass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
@@ -219,7 +219,7 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
   "url": "https://qtpass.org"
 }
 </script>
-<script src="javascripts/scale.fix.js"></script>
-<script src="javascripts/main.js"></script>
+<script src="javascripts/scale.fix.js" defer></script>
+<script src="javascripts/main.js" defer></script>
 </body>
 </html>
